force-app/main/default/objects/Token_Usage__c/Token_Usage__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Token Usage</label>
</CustomObject>