force-app/main/default/objects/Token_Usage__c/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <defaultValue>1500000</defaultValue>
    <label>Max</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>