force-app/main/default/objects/Token_Usage__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <defaultValue>MONTH(TODAY())</defaultValue>
    <label>Month</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>