force-app/main/default/objects/Token_Usage__c/fields/Tokens_Used__c.field-meta.xml
<CustomField>
    <fullName>Tokens_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tokens Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>