force-app/main/default/objects/Token_Usage__c/fields/Use_Backup__c.field-meta.xml
<CustomField>
    <fullName>Use_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Backup</label>
    <type>Checkbox</type>
</CustomField>